--- a/animation.html
+++ b/animation.html
@@ -60,7 +60,7 @@
 
     <nav>
       <!--Zone du menu, les liens pour naviguer sur le site-->
-      <ul class="ancreNav" style="list-style: none">
+      <ul class="ancreNav" style="list-style: none;">
         <li><a href="index.html">Structure</a></li>
         <li><a href="texte.html">Texte</a></li>
         <li><a href="selecteur.html">Selecteur</a></li>
