--- a/zoning.html
+++ b/zoning.html
@@ -77,6 +77,7 @@
     </nav>
 
     <main>
+      <h1>Zoning</h1>
       <!--Contenu principal-->
       <aside>
         <!--Contenu secondaire-->
@@ -84,18 +85,88 @@
 
       <section>
         <!--Zone de contenu : titre, texte, regroupement thématique-->
-        <div>
+        <h3>Zoning 1</h3>
+        <div class="zone">
+          <p>Zone de du haut</p>
           <!--Zone supplémentaire de contenu-->
         </div>
-
-        <span>
-          <!--Zone supplémentaire de contenu-->
-        </span>
-
-        <article>
-          <!--Zone supplémentaire de contenu-->
-        </article>
+        <div class="zone12">
+          <div class="zone1">
+            <p>Zone de gauche</p>
+          </div>
+          <div class="zone2">
+            <p>Zone de droite</p>
+          </div>
+        </div>
       </section>
+
+      <!-- Segundo Bloco -->
+      <section>
+        <h3>Zoning 2</h3>
+        <div class="zone3">
+          <p>Zone du haut <b>HEADER</b></p>
+        </div>
+        <div class="zone456">
+          <div class="zone4">
+            <p class="blanc">Zone de gauche ASIDE</p>
+          </div>
+          <div class="zone5">
+            <p class="blanc">Zone du milieu MiIDDLE</p>
+          </div>
+          <div class="zone6">
+            <p class="blanc">Zone de droite ASIDE</p>
+          </div>
+        </div>
+      </section>
+      <!-- final do segundo bloco -->
+      <!-- terceiro bloco -->
+      <section>
+        <h3>Zoning 3</h3>
+        <div class="zone78">
+          <div class="zone7"><p class="blanc">Gauche SECTION</p></div>
+          <div class="zone8"><p class="blanc">Droit SECTION</p></div>
+        </div>
+        <div class="zone9">Bas FOOTER</div>
+      </section>
+      <!-- finql do terceiro bloco -->
+      <!-- começo do quarto bloco -->
+      <section>
+        <h3>Zoning 4</h3>
+        <div class="bord">
+          <div class="zone10"><p>HEADER</p></div>
+          <div class="zone11"><p>NAV</p></div>
+          <div class="zon12"></div>
+          <div class="zone13"><p>SECTION</p></div>
+          <div class="zone14"><p>FOOTER</p></div>
+        </div>
+      </section>
+      <!-- final do quarto bloco -->
+      <!-- começo do quinto bloco -->
+      <section>
+        <h3>Zoning 5</h3>
+        <div class="bord">
+          <div class="zone15"><p class="blanc">HEADER</p></div>
+          <div class="zone16"><p class="blanc">NAV</p></div>
+          <div class="zon17"></div>
+          <!-- quadrado com 4 quadrados de dentro -->
+
+          <div class="quadre12">
+            <div class="quadre1"></div>
+            <div class="quadre2"></div>
+            <div class="quadre3"></div>
+            <div class="quadre4"></div>
+          </div>
+
+          <!-- fim do quadrado com 4 quadrados de dentro -->
+          <div class="zone19"><p>FOOTER</p></div>
+        </div>
+      </section>
+      <!-- final do quinto bloco -->
+      <!-- começo do sexto bloco -->
+      <section>
+        <h3>Zoning 6</h3>
+      </section>
+      <!-- final do sexto bloco -->
     </main>
 
     <footer>
