--- a/zoning.html
+++ b/zoning.html
@@ -165,6 +165,30 @@
       <!-- começo do sexto bloco -->
       <section>
         <h3>Zoning 6</h3>
+        <div class="zone202122">
+          <div class="zone20"></div>
+          <div class="zone21"></div>
+          <div class="zone22"></div>
+        </div>
+        <div class="zone23"></div>
+        <div class="zone242526">
+          <div class="zone24"></div>
+          <div class="zone25"></div>
+          <div class="zone26"></div>
+        </div>
+        <div class="zone2728">
+          <div class="zone27"></div>
+          <div class="zone28"></div>
+        </div>
+        <div class="zone2930313233">
+            <div class="zone29"></div>
+            <div class="zone30"></div>
+            <div class="zone31"></div>
+            <div class="zone32"></div>
+            <div class="zone33"></div>
+        </div>
+        <div class="zone34">
+        </div>
       </section>
       <!-- final do sexto bloco -->
     </main>
