--- a/liste.html
+++ b/liste.html
@@ -60,7 +60,7 @@
 
     <nav>
       <!--Zone du menu, les liens pour naviguer sur le site-->
-      <ul class="ancreNav" style="list-style: none;">
+      <ul class="ancreNav" style="list-style: none">
         <li><a href="index.html">Structure</a></li>
         <li><a href="texte.html">Texte</a></li>
         <li><a href="selecteur.html">Selecteur</a></li>
@@ -78,23 +78,38 @@
 
     <main>
       <!--Contenu principal-->
-      <aside>
-        <!--Contenu secondaire-->
-      </aside>
-
+      <h1>Liste</h1>
       <section>
-        <!--Zone de contenu : titre, texte, regroupement thématique-->
-        <div>
-          <!--Zone supplémentaire de contenu-->
-        </div>
-
-        <span>
-          <!--Zone supplémentaire de contenu-->
-        </span>
-
-        <article>
-          <!--Zone supplémentaire de contenu-->
-        </article>
+        <h3>Les listes non-ordonnées - ul</h3>
+        <ul class="list">
+          <li><i class="fa fa-hand-spock-o" aria-hidden="true"></i>Orange</li>
+          <li><i class="fa fa-hand-spock-o" aria-hidden="true"></i>Fraise</li>
+          <li><i class="fa fa-hand-spock-o" aria-hidden="true"></i>Poire</li>
+        </ul>
+      </section>
+      <section>
+        <h3>Les listes ordonnées - ol</h3>
+        <ol>
+          <li>Html/Css</li>
+          <li>PHP/SQL</li>
+          <li>JS/JQUERY</li>
+        </ol>
+      </section>
+      <section>
+        <h3>Listes imbriquées</h3>
+        <ul class="continents">
+          <li>Europe</li>
+          <li>Asie</li>
+        </ul>
+      </section>
+      <section>
+        <h3>Listes de définitions</h3>
+        <dl>
+          <dd>F</dd>
+          <dd>Foxtrot</dd>
+          <dd>France</dd>
+          <dd>Food</dd>
+        </dl>
       </section>
     </main>
 
